Reduce usage of `StringUtils` (#8999)