@@ -55,19 +55,19 @@ public final class Symbol {
         String symbol = SYMBOLS
                 .computeIfAbsent(identifier, key -> new ConcurrentHashMap<>())
                 .computeIfAbsent(name, key -> loadSymbol(identifier, key));
-        if (StringUtils.isNotBlank(tooltip) && StringUtils.isBlank(htmlTooltip)) {
+        if ((tooltip != null && !tooltip.isBlank()) && (htmlTooltip == null || htmlTooltip.isBlank())) {
             symbol = symbol.replaceAll("<svg", "<svg tooltip=\"" + Functions.htmlAttributeEscape(tooltip) + "\"");
         }
-        if (StringUtils.isNotBlank(htmlTooltip)) {
+        if (htmlTooltip != null && !htmlTooltip.isBlank()) {
             symbol = symbol.replaceAll("<svg", "<svg data-html-tooltip=\"" + Functions.htmlAttributeEscape(htmlTooltip) + "\"");
         }
-        if (StringUtils.isNotBlank(id)) {
+        if (id != null && !id.isBlank()) {
             symbol = symbol.replaceAll("<svg", "<svg id=\"" + Functions.htmlAttributeEscape(id) + "\"");
         }
-        if (StringUtils.isNotBlank(classes)) {
+        if (classes != null && !classes.isBlank()) {
             symbol = symbol.replaceAll("<svg", "<svg class=\"" + Functions.htmlAttributeEscape(classes) + "\"");
         }
-        if (StringUtils.isNotBlank(title)) {
+        if (title != null && !title.isBlank()) {
             symbol = "<span class=\"jenkins-visually-hidden\">" + Util.xmlEscape(title) + "</span>" + symbol;
         }
         return symbol;
